--- a/commenter.cabal
+++ b/commenter.cabal
@@ -25,7 +25,7 @@ Library
    ,blaze-html        >= 0.5.1.3
    ,http-types        >= 0.7
    ,pureMD5           >= 2.1.2.1
-   ,aeson             >= 0.6.1.0
+   -aeson             >= 0.6.1.0
    ,process           >= 1.1.0.1
    ,regex-posix       >= 0.95
    ,pandoc            >= 1.11.1
@@ -44,14 +44,3 @@ Library
                  Commenter.Views
                  Commenter.Models
                  Commenter.Policy
-                 --
-                 --ActiveCode.C
-                 --ActiveCode.Haskell
-                 --ActiveCode.JavaScript
-                 --ActiveCode.Languages
-
---Executable activeCode
-  --Main-is: activeCode.hs
-  --Build-Depends:
-    --base              >= 4.5     && < 5.0
-   --,bytestring        >= 0.9
