--- a/commenter.cabal
+++ b/commenter.cabal
@@ -28,6 +28,7 @@ Library
    ,aeson             >= 0.6.1.0
    ,process           >= 1.1.0.1
    ,regex-posix       >= 0.95
+   ,regex-compat
    ,pandoc            >= 1.11.1
    ,highlighting-kate >= 0.5.3.8
    ,time              >= 1.2.0.5
@@ -37,6 +38,7 @@ Library
    ,old-locale        >= 1.0.0.5
    ,xml               >= 1.3.12
    ,feed              >= 0.3.8
+   ,MissingH
    ,xhtml             >= 3000.2.1
    ,bson              >= 0.2.2
 
