--- a/database.conf
+++ b/database.conf
@@ -1,2 +1,1 @@
-("main:Commenter.Policy.CommentPolicy","comments_db")
-("main:LBH.MP.LBHPolicy","comments_db")
+("main:Hirc.Policy.HircPolicy","hirc_db")
