--- a/hirc.cabal
+++ b/hirc.cabal
@@ -15,13 +15,13 @@ Description: Hails IRC - a chat app inspired by IRC. The name is pronounced hi-R
 Library
   Build-Depends:
     base              >= 4.5     && < 5.0
-   ,lio
+   --,lio
    ,transformers      >= 0.2.2
    ,mtl               >= 2.0
    ,containers        >= 0.4.2
    ,bytestring        >= 0.10
    ,text              >= 0.11
-   --,lio               >= 0.9.2.2
+   ,lio               >= 0.9.2.2
    ,hails             >= 0.9.2.1
    ,blaze-html        >= 0.5.1.3
    ,http-types        >= 0.7
